- mousedrake, XFdrake:
  o do not use /dev/mouse symlink (in xorg.conf)
- mousedrake
  o do not propose to test the chosen mice
    (it doesn't handle evdev/synaptics and so is quite obsolete nowadays)

Version 0.64 - 1 October 2008

- XFdrake:
  o explicitly Load or Disable module "dri"
    (to be independent of Xorg's default choice)

Version 0.63 - 30 September 2008

- translations updates

Version 0.62 - 25 September 2008

- XFdrake:
  o set "PreferredMode" in Monitor section if the user changes the resolution
   (we still do not use PreferredMode for the default resolution)

Version 0.61 - 11 September 2008

- keyboarddrake:
  o fix lithuanian keyboard choices (cf #41031)
- XFdrake:
  o do set a background image when using resolution "Automatic" (#43644)

Version 0.60 - 9 September 2008

- XFdrake:
  o allow xorg.conf to have no "Monitor" section (#42793)
  o [bugfix] fix clicking on "Options" when Composite is disabled 
    (regression introduced in 0.58) (#43710)

Version 0.59 - 18 August 2008

- XFdrake:
  o use 24dpp by default, even on DRI (needed for kde4)
  o ensure we don't drop non-main "Device" (when modifying "Options", #41410)
  o use nvidia-current default settings for nvidia173 as well
  o no need to force XaaNoOffscreenPixmaps, it is the default now in
    x11-server

Version 0.58 - 9 June 2008

- XFdrake:
  o Composite is now the default in xserver 1.4 (#35043)
  o do not create symlink /etc/X11/X to ../../usr/bin/Xorg (#41363)
  o drop support for /etc/X11/XF86Config (replaced by xorg.conf for some time now)
- mousedrake:
  o evdev and imwheel handle orthogonal things, so do use imwheel even if we
  need evdev (#40088)

Version 0.57 - 2 April 2008

- XFdrake:
  o workaround pb with nvidia driver: make dm restart xserver (#38297)
  o do not disable RenderAccel on nvidia-current
    (regression introduced in 0.21)

Version 0.55 - 27 March 2008

- XFdrake:
  o disable "DynamicTwinView" when not using TwinView (#39171)
