@@ -1,3 +1,6 @@
+- XFdrake:
+  o generic flat planel must allow "800x480 @ 60.00 Hz (GTF) hsync: 29.82 kHz"
+    so "HorizSync 31.5-90" is too strict, generating "HorizSync 29.5-90"
 - mousedrake, XFdrake:
   o do not use /dev/mouse symlink (in xorg.conf)
 - mousedrake
